bindings/c/whiteout_mpq.h

/* SPDX-License-Identifier: BSD-3-Clause */
/* Copyright (c) 2026 Fernando Sahmkow */
/* AUTOGENERATED by tools/codegen/emit_c.py — do not edit. */
/* Regenerate via:  python -m tools.codegen.codegen mpq --backend c-header */

#ifndef WHITEOUT_MPQ_H
#define WHITEOUT_MPQ_H

#include "whiteout_c_common.h"

#ifdef __cplusplus
extern "C" {
#endif

/* ── Owned string list ───────── */

typedef struct whiteout_StringList whiteout_StringList;
size_t whiteout_mpq_StringList_size(const whiteout_StringList* self);
/* Borrowed; valid until the list is destroyed. */
whiteout_CString whiteout_mpq_StringList_at(whiteout_StringList* self, size_t index);
void whiteout_mpq_StringList_delete(whiteout_StringList* self);

/* ── Enums ─────────────────────────────────────────────────── */

typedef enum {
    whiteout_mpq_FormatVersion_V1,
    whiteout_mpq_FormatVersion_V2,
} whiteout_mpq_FormatVersion;

typedef enum {
    whiteout_mpq_Compression_None,
    whiteout_mpq_Compression_Huffman,
    whiteout_mpq_Compression_Zlib,
    whiteout_mpq_Compression_PKware,
    whiteout_mpq_Compression_BZip2,
    whiteout_mpq_Compression_Sparse,
    whiteout_mpq_Compression_AdpcmMono,
    whiteout_mpq_Compression_AdpcmStereo,
} whiteout_mpq_Compression;

typedef enum {
    whiteout_mpq_FileFlags_None,
    whiteout_mpq_FileFlags_Compressed,
    whiteout_mpq_FileFlags_Encrypted,
    whiteout_mpq_FileFlags_SingleUnit,
    whiteout_mpq_FileFlags_Exists,
} whiteout_mpq_FileFlags;

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MpqFileInfo whiteout_MpqFileInfo;
typedef struct whiteout_MpqArchiveInfo whiteout_MpqArchiveInfo;
typedef struct whiteout_MpqWriteOptions whiteout_MpqWriteOptions;
typedef struct whiteout_MpqCreateOptions whiteout_MpqCreateOptions;
typedef struct whiteout_MpqStorage whiteout_MpqStorage;
typedef struct whiteout_MpqFileSystem whiteout_MpqFileSystem;

/* ── MpqFileInfo ─────────────────────────────────────────────── */

/* Information about a single file in the archive. */
whiteout_MpqFileInfo* whiteout_mpq_MpqFileInfo_new(void);
void whiteout_mpq_MpqFileInfo_delete(whiteout_MpqFileInfo* self);

/* Filename (from listfile or hash table lookup). */
whiteout_CString whiteout_mpq_MpqFileInfo_get_name(const whiteout_MpqFileInfo* self);
void whiteout_mpq_MpqFileInfo_set_name(whiteout_MpqFileInfo* self, const char* value);
/* Compressed storage size in bytes. */
uint32_t whiteout_mpq_MpqFileInfo_get_compressedSize(const whiteout_MpqFileInfo* self);
void whiteout_mpq_MpqFileInfo_set_compressedSize(whiteout_MpqFileInfo* self, uint32_t value);
/* Uncompressed (original) file size in bytes. */
uint32_t whiteout_mpq_MpqFileInfo_get_uncompressedSize(const whiteout_MpqFileInfo* self);
void whiteout_mpq_MpqFileInfo_set_uncompressedSize(whiteout_MpqFileInfo* self, uint32_t value);
/* Block entry flags (see FileFlags enum). */
int32_t whiteout_mpq_MpqFileInfo_get_flags(const whiteout_MpqFileInfo* self);
void whiteout_mpq_MpqFileInfo_set_flags(whiteout_MpqFileInfo* self, int32_t value);
/* Locale ID (typically Locale::Neutral). */
uint16_t whiteout_mpq_MpqFileInfo_get_locale(const whiteout_MpqFileInfo* self);
void whiteout_mpq_MpqFileInfo_set_locale(whiteout_MpqFileInfo* self, uint16_t value);

/* ── MpqArchiveInfo ─────────────────────────────────────────────── */

/* Summary information about the archive. */
whiteout_MpqArchiveInfo* whiteout_mpq_MpqArchiveInfo_new(void);
void whiteout_mpq_MpqArchiveInfo_delete(whiteout_MpqArchiveInfo* self);

/* 0 = V1, 1 = V2. */
uint16_t whiteout_mpq_MpqArchiveInfo_get_formatVersion(const whiteout_MpqArchiveInfo* self);
void whiteout_mpq_MpqArchiveInfo_set_formatVersion(whiteout_MpqArchiveInfo* self, uint16_t value);
/* Hash table capacity (always a power of 2). */
uint32_t whiteout_mpq_MpqArchiveInfo_get_hashTableEntries(const whiteout_MpqArchiveInfo* self);
void whiteout_mpq_MpqArchiveInfo_set_hashTableEntries(whiteout_MpqArchiveInfo* self, uint32_t value);
/* Number of occupied block table entries. */
uint32_t whiteout_mpq_MpqArchiveInfo_get_blockTableEntries(const whiteout_MpqArchiveInfo* self);
void whiteout_mpq_MpqArchiveInfo_set_blockTableEntries(whiteout_MpqArchiveInfo* self, uint32_t value);
/* Sector size in bytes (512 << sectorSizeShift). */
uint32_t whiteout_mpq_MpqArchiveInfo_get_sectorSize(const whiteout_MpqArchiveInfo* self);
void whiteout_mpq_MpqArchiveInfo_set_sectorSize(whiteout_MpqArchiveInfo* self, uint32_t value);
/* Total archive size in bytes. */
uint64_t whiteout_mpq_MpqArchiveInfo_get_archiveSize(const whiteout_MpqArchiveInfo* self);
void whiteout_mpq_MpqArchiveInfo_set_archiveSize(whiteout_MpqArchiveInfo* self, uint64_t value);

/* ── MpqWriteOptions ─────────────────────────────────────────────── */

/* Options for writing a file into the archive. */
whiteout_MpqWriteOptions* whiteout_mpq_MpqWriteOptions_new(void);
void whiteout_mpq_MpqWriteOptions_delete(whiteout_MpqWriteOptions* self);

/* Compression algorithm to apply. */
int32_t whiteout_mpq_MpqWriteOptions_get_compression(const whiteout_MpqWriteOptions* self);
void whiteout_mpq_MpqWriteOptions_set_compression(whiteout_MpqWriteOptions* self, int32_t value);
/* Locale ID for the hash table slot. */
uint16_t whiteout_mpq_MpqWriteOptions_get_locale(const whiteout_MpqWriteOptions* self);
void whiteout_mpq_MpqWriteOptions_set_locale(whiteout_MpqWriteOptions* self, uint16_t value);
/* Encrypt file data with a derived key. */
int32_t whiteout_mpq_MpqWriteOptions_get_encrypt(const whiteout_MpqWriteOptions* self);
void whiteout_mpq_MpqWriteOptions_set_encrypt(whiteout_MpqWriteOptions* self, int32_t value);
/* Store the file as a single unpartitioned unit. */
int32_t whiteout_mpq_MpqWriteOptions_get_singleUnit(const whiteout_MpqWriteOptions* self);
void whiteout_mpq_MpqWriteOptions_set_singleUnit(whiteout_MpqWriteOptions* self, int32_t value);

/* ── MpqCreateOptions ─────────────────────────────────────────────── */

/* Options for creating a new archive. */
whiteout_MpqCreateOptions* whiteout_mpq_MpqCreateOptions_new(void);
void whiteout_mpq_MpqCreateOptions_delete(whiteout_MpqCreateOptions* self);

/* Archive format version (V1 or V2). */
int32_t whiteout_mpq_MpqCreateOptions_get_version(const whiteout_MpqCreateOptions* self);
void whiteout_mpq_MpqCreateOptions_set_version(whiteout_MpqCreateOptions* self, int32_t value);
/* Initial hash table capacity; rounded up to the next power of 2. */
uint32_t whiteout_mpq_MpqCreateOptions_get_hashTableSize(const whiteout_MpqCreateOptions* self);
void whiteout_mpq_MpqCreateOptions_set_hashTableSize(whiteout_MpqCreateOptions* self, uint32_t value);
/* Sector size = 512 << shift (default 3 → 4096 bytes). */
uint16_t whiteout_mpq_MpqCreateOptions_get_sectorSizeShift(const whiteout_MpqCreateOptions* self);
void whiteout_mpq_MpqCreateOptions_set_sectorSizeShift(whiteout_MpqCreateOptions* self, uint16_t value);

/* ── MpqStorage ─────────────────────────────────────────────── */

/* RAII wrapper for MPQ archive access */
/*  */
/* Provides full CRUD operations on MPQ archives.  Modifications are held in a virtual overlay until save() is called, which writes a complete new archive atomically (write to temp file, then rename). */
/*  */
/* All public methods are thread-safe: read operations acquire a shared lock; write and persist operations acquire an exclusive lock. */
void whiteout_mpq_MpqStorage_delete(whiteout_MpqStorage* self);

/* Open an existing MPQ archive. Memory-maps the file and parses tables. @param path  Path to the .mpq file. @param pool  Optional WorkerPool for parallel compress/decompress (non-owning). @return A valid Storage, or std::nullopt on failure. */
struct whiteout_MpqStorage* whiteout_mpq_MpqStorage_open(const char* path, void* pool);
/* Create a new empty archive in memory. No file on disk until save(path). */
struct whiteout_MpqStorage* whiteout_mpq_MpqStorage_create(struct whiteout_MpqCreateOptions* opts, void* pool);
/* Release all resources. Same effect as letting the Storage go out of scope. */
void whiteout_mpq_MpqStorage_close(whiteout_MpqStorage* self);
/* Read a file from the archive. Checks the overlay first, then the source archive. @return File contents, or std::nullopt if not found or deleted. */
whiteout_Bytes whiteout_mpq_MpqStorage_readFile(const whiteout_MpqStorage* self, const char* name);
/* Read a file with a specific locale. */
whiteout_Bytes whiteout_mpq_MpqStorage_readFile_name_locale(const whiteout_MpqStorage* self, const char* name, uint16_t locale);
/* Check if a file exists in the archive (including overlay). */
int32_t whiteout_mpq_MpqStorage_fileExists(const whiteout_MpqStorage* self, const char* name);
/* Get information about a file. */
struct whiteout_MpqFileInfo* whiteout_mpq_MpqStorage_fileInfo(const whiteout_MpqStorage* self, const char* name);
/* Get summary information about the archive. */
struct whiteout_MpqArchiveInfo* whiteout_mpq_MpqStorage_archiveInfo(const whiteout_MpqStorage* self);
/* List all known filenames (from listfile + overlay additions − deletions). */
size_t whiteout_mpq_MpqStorage_listFiles_count(const whiteout_MpqStorage* self);
whiteout_CString whiteout_mpq_MpqStorage_listFiles_at(const whiteout_MpqStorage* self, size_t index);
/* Materialises the whole list in one call. Prefer this over the
 * _count/_at pair above, which re-runs the query per index. */
struct whiteout_StringList* whiteout_mpq_MpqStorage_listFiles(const whiteout_MpqStorage* self);
/* Write or overwrite a file. Data is held in overlay until save(). @return true on success, false if the hash table is full. */
int32_t whiteout_mpq_MpqStorage_writeFile(whiteout_MpqStorage* self, const char* name, const uint8_t* data, size_t data_size, struct whiteout_MpqWriteOptions* opts);
/* Delete a file from the archive. @return true if the file was found (in source or overlay), false otherwise. */
int32_t whiteout_mpq_MpqStorage_deleteFile(whiteout_MpqStorage* self, const char* name);
/* Save the archive to its original path (temp file + atomic rename). @return false if this Storage was created via create() with no prior save(path). */
int32_t whiteout_mpq_MpqStorage_save(whiteout_MpqStorage* self);
/* Save the archive to a specific path. After saving, the new file becomes the source archive and the overlay is cleared. */
int32_t whiteout_mpq_MpqStorage_save_path(whiteout_MpqStorage* self, const char* path);

/* ── MpqFileSystem ─────────────────────────────────────────────── */

/* VirtualPathFileSystem implementation backed by an MPQ archive. */
/*  */
/* The Storage must outlive this object — MpqFileSystem holds a non-owning reference to it. */
/*  */
/* Path separators: both '/' and '\\' are accepted and treated identically. Filename comparison is case-insensitive, matching MPQ archive semantics. */
/*  */
/* Requires the `whiteout_mpq` CMake target. */
/*  */
/* Example: auto storage = mpq::Storage::open("War3.mpq"); utils::MpqFileSystem fs(*storage); auto data = fs.readFile("units\\orc\\grunt\\grunt.mdx"); */
whiteout_MpqFileSystem* whiteout_mpq_MpqFileSystem_new_storage(struct whiteout_MpqStorage* storage);
void whiteout_mpq_MpqFileSystem_delete(whiteout_MpqFileSystem* self);

/* Read a file from the archive. Returns an empty vector if not found. */
whiteout_Bytes whiteout_mpq_MpqFileSystem_readFile(const whiteout_MpqFileSystem* self, const char* path);
/* Write a file into the archive overlay. Changes are not persisted to disk until storage.save() is called on the underlying Storage. */
int32_t whiteout_mpq_MpqFileSystem_writeFile(whiteout_MpqFileSystem* self, const char* path, const uint8_t* data, size_t data_size);
/* Check if a file exists in the archive (including the write overlay). */
int32_t whiteout_mpq_MpqFileSystem_fileExists(const whiteout_MpqFileSystem* self, const char* path);


#ifdef __cplusplus
} /* extern "C" */
#endif

#endif /* WHITEOUT_MPQ_H */