bindings/csharp/Whiteout/Mpq/NativeMethods.Mpq.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.Mpq.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mpq_StringList_size(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mpq_StringList_at(IntPtr self, nuint index);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_StringList_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqFileInfo_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileInfo_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mpq_MpqFileInfo_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileInfo_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mpq_MpqFileInfo_get_compressedSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileInfo_set_compressedSize(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mpq_MpqFileInfo_get_uncompressedSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileInfo_set_uncompressedSize(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mpq_MpqFileInfo_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileInfo_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_mpq_MpqFileInfo_get_locale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileInfo_set_locale(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqArchiveInfo_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqArchiveInfo_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_mpq_MpqArchiveInfo_get_formatVersion(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqArchiveInfo_set_formatVersion(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mpq_MpqArchiveInfo_get_hashTableEntries(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqArchiveInfo_set_hashTableEntries(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mpq_MpqArchiveInfo_get_blockTableEntries(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqArchiveInfo_set_blockTableEntries(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mpq_MpqArchiveInfo_get_sectorSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqArchiveInfo_set_sectorSize(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_mpq_MpqArchiveInfo_get_archiveSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqArchiveInfo_set_archiveSize(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqWriteOptions_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqWriteOptions_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mpq_MpqWriteOptions_get_compression(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqWriteOptions_set_compression(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_mpq_MpqWriteOptions_get_locale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqWriteOptions_set_locale(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mpq_MpqWriteOptions_get_encrypt(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqWriteOptions_set_encrypt(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mpq_MpqWriteOptions_get_singleUnit(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqWriteOptions_set_singleUnit(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqCreateOptions_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqCreateOptions_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mpq_MpqCreateOptions_get_version(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqCreateOptions_set_version(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mpq_MpqCreateOptions_get_hashTableSize(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqCreateOptions_set_hashTableSize(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_mpq_MpqCreateOptions_get_sectorSizeShift(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqCreateOptions_set_sectorSizeShift(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqStorage_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqStorage_open([MarshalAs(UnmanagedType.LPUTF8Str)] string path, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqStorage_create(IntPtr opts, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqStorage_close(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_mpq_MpqStorage_readFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_mpq_MpqStorage_readFile_name_locale(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, ushort locale);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqStorage_fileExists(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqStorage_fileInfo(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqStorage_archiveInfo(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mpq_MpqStorage_listFiles_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mpq_MpqStorage_listFiles_at(IntPtr self, nuint index);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqStorage_listFiles(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqStorage_writeFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, ReadOnlySpan<byte> data, nuint data_size, IntPtr opts);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqStorage_deleteFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqStorage_save(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqStorage_save_path(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mpq_MpqFileSystem_new_storage(IntPtr storage);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mpq_MpqFileSystem_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_mpq_MpqFileSystem_readFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqFileSystem_writeFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, ReadOnlySpan<byte> data, nuint data_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_mpq_MpqFileSystem_fileExists(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

}
